tests/sintax-semanth/should_fail/missing_main_method.tds
program
begin
	bool fun(integer w)
		begin
			integer a = 5;
			integer b = a + (7 + 15);
		end
end